<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/appbar_add_to_favorite"
        android:icon="@drawable/ic_favorite_empty"
        android:title="@string/add_to_favorite"
        app:showAsAction="always" />
</menu>